Header text, theme picker, theme picker working

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,8 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   margin: 0;
 }
+
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+}
