--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row id="header__toolbar-row" class="flex-between">
+    <span id="header__title-text">Loottable</span>
+    <mon-theme-picker id="header__theme-picker"></mon-theme-picker>
+  </mat-toolbar-row>
+</mat-toolbar>
