Move footer to the bottom

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row id="footer__toolbar-row" class="flex-between">
+    <span id="footer__title-text">An unofficial D&D tool</span>
+  </mat-toolbar-row>
+</mat-toolbar>
